fix spacing for table

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,400&display=swap');
 
-
 body {
   font-family: 'DM Sans', sans-serif;
   min-height: 100vh;
@@ -87,13 +86,14 @@ footer a:hover {
   align-items: center;
   flex-direction: column;
   padding: 1% 20%;
+  margin-bottom: 2%;
 }
 
 .selects-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 select {
@@ -103,7 +103,6 @@ select {
   border-radius: 20px;
   padding: 4px;
   color: black;
-  margin: 1% 0% 12% 0%;
 }
 
 option {
